--- a/origin.html
+++ b/origin.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<div id="wrapper">
+    <div class="top"></div>
+    <div class="middle">
+        <div class="container">
+        </div>
+    </div>
+    <div class="bottom"></div>
+</div>
 
 <head>
 
@@ -109,7 +117,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 col-xs-6">
+                <div class="col-lg-7 col-xs-12">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">The Origin of Pho</h2>
@@ -118,7 +126,7 @@
                 <br>
                 <br>
                 <br>
-                <div class="col-lg-5 col-xs-6">
+                <div class="col-lg-5 col-xs-12">
                     <img style="display:block;" width="100%" height="150%" src="http://english.cinet.vn/userfiles/image/2015/pho%20thin%20lo%20duc%201.jpg">
                 </div>
             </div>
@@ -133,13 +141,13 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6 col-xs-12">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">How To Eat Pho</h2>
                     <p class="lead"> The bowl arrives. Plastic chopsticks in right hand, soup spoon in left. Sip the broth first (I stress this because it’s important) while you work the noodles with your chopsticks. It’s OK, even preferred, that you stick your face into the bowl while slurping. You get a hit of those aromatics while avoiding a messy splatter. Once the noodles are gone (they usually go first), raise the bowl to your lips with both hands and polish it off. This is not impolite. This is how you finish a bowl of pho — like a child would finish a bowl of Apple Jacks. Both are great in the morning.</p>
                 </div>
-                <div class="col-lg-3 col-sm-pull-6  col-sm-6">
+                <div class="col-lg-3 col-sm-pull-6  col-sm-6 col-xs-12">
                   <br>
                   <br>
                   <br>
