--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="col-lg-12 col-xs-12">
                     <div class="intro-message">
                         <h1>Phở</h1>
-                        <h3>Are You PhoReal? Mo Than Just Noodles</h3>
+                        <h3>Are You Pho Real???</h3>
                         <hr class="intro-divider">
 
                     </div>
